--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,11 @@
 	/*margin-left: 25px;*/
 	font-size: 20px;
 }
+.p2{
+	font-family: 'Baloo Tamma 2', cursive;
+	font-size: 20px;
+	margin-top:30px;
+}
 #videos{
 	display: none;
 }
