--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Font Name: Lato, Raleway
  */
 /* Lato Hariline */
-@font-face {
+/*@font-face {
   font-family: 'Lato';
   font-weight: 100;
   src: url("../fonts/Lato-Hairline.ttf");
@@ -14,10 +14,10 @@
   font-weight: 100;
   font-style: italic;
   src: url("../fonts/Lato-HairlineItalic.ttf");
-}
+}*/
 /* End Lato Hariline */
 /* Lato Light */
-@font-face {
+/*@font-face {
   font-family: 'Lato';
   font-weight: 200;
   src: url("../fonts/Lato-Light.ttf");
@@ -28,9 +28,9 @@
   font-style: italic;
   src: url("../fonts/Lato-LightItalic.ttf");
 }
-/* End Lato Light */
+/* End Lato Light */*/
 /* Lato Regular */
-@font-face {
+/*@font-face {
   font-family: 'Lato';
   font-weight: 300;
   src: url("../fonts/Lato-Regular.ttf");
@@ -40,10 +40,10 @@
   font-weight: 300;
   font-style: italic;
   src: url("../fonts/Lato-Italic.ttf");
-}
+}*/
 /* End Lato Regular */
 /* Lato Bold */
-@font-face {
+/*@font-face {
   font-family: 'Lato';
   font-weight: 400;
   src: url("../fonts/Lato-Bold.ttf");
@@ -53,10 +53,10 @@
   font-weight: 400;
   font-style: italic;
   src: url("../fonts/Lato-BoldItalic.ttf");
-}
+}*/
 /* End Lato Bold */
 /* Lato Black */
-@font-face {
+/*@font-face {
   font-family: 'Lato';
   font-weight: 500;
   src: url("../fonts/Lato-Black.ttf");
@@ -66,10 +66,10 @@
   font-weight: 500;
   font-style: italic;
   src: url("../fonts/Lato-BlackItalic.ttf");
-}
+}*/
 /* End Lato Black */
 /* Raleway Thin */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 100;
   src: url("../fonts/Raleway-Thin.ttf");
@@ -79,10 +79,10 @@
   font-weight: 100;
   font-style: italic;
   src: url("../fonts/Raleway-ThinItalic.ttf");
-}
+}*/
 /* End Raleway Thin */
 /* Raleway ExtraLight */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 200;
   src: url("../fonts/Raleway-ExtraLight.ttf");
@@ -92,10 +92,10 @@
   font-weight: 200;
   font-style: italic;
   src: url("../fonts/Raleway-ExtraLightItalic.ttf");
-}
+}*/
 /* End Raleway ExtraLight */
 /* Raleway Light */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 300;
   src: url("../fonts/Raleway-Light.ttf");
@@ -105,10 +105,10 @@
   font-weight: 300;
   font-style: italic;
   src: url("../fonts/Raleway-LightItalic.ttf");
-}
+}*/
 /* End Raleway Light */
 /* Raleway Regular */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 400;
   src: url("../fonts/Raleway-Regular.ttf");
@@ -119,9 +119,9 @@
   font-style: italic;
   src: url("../fonts/Raleway-Italic.ttf");
 }
-/* End Raleway Regular */
+*//* End Raleway Regular */
 /* Raleway Medium */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 500;
   src: url("../fonts/Raleway-Medium.ttf");
@@ -131,10 +131,10 @@
   font-weight: 500;
   font-style: italic;
   src: url("../fonts/Raleway-MediumItalic.ttf");
-}
+}*/
 /* End Raleway Medium */
 /* Raleway SemiBold */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 600;
   src: url("../fonts/Raleway-SemiBold.ttf");
@@ -144,10 +144,10 @@
   font-weight: 600;
   font-style: italic;
   src: url("../fonts/Raleway-SemiBoldItalic.ttf");
-}
+}*/
 /* End Raleway SemiBold */
 /* Raleway Bold */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 700;
   src: url("../fonts/Raleway-Bold.ttf");
@@ -157,10 +157,10 @@
   font-weight: 700;
   font-style: italic;
   src: url("../fonts/Raleway-BoldItalic.ttf");
-}
+}*/
 /* End Raleway Bold */
 /* Raleway ExtraBold */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 800;
   src: url("../fonts/Raleway-ExtraBold.ttf");
@@ -170,10 +170,10 @@
   font-weight: 800;
   font-style: italic;
   src: url("../fonts/Raleway-ExtraBoldItalic.ttf");
-}
+}*/
 /* End Raleway ExtraBold */
 /* Raleway Black */
-@font-face {
+/*@font-face {
   font-family: 'Raleway';
   font-weight: 900;
   src: url("../fonts/Raleway-Black.ttf");
@@ -183,10 +183,10 @@
   font-weight: 900;
   font-style: italic;
   src: url("../fonts/Raleway-BlackItalic.ttf");
-}
+}*/
 /* End Raleway Black */
 /* Merriweather */
-@font-face {
+/*@font-face {
   font-family: 'Merriweather';
   font-weight: 300;
   src: url("../fonts/Merriweather-Light.ttf");
@@ -223,7 +223,7 @@
   font-family: 'Merriweather';
   font-weight: 900;
   src: url("../fonts/Merriweather-Black.ttf");
-}
+}*/
 /* End Merriweather */
 /*
  * Variable
