--- a/css/style.css
+++ b/css/style.css
@@ -1892,7 +1892,7 @@ article footer .btn-primary:focus {
 }
 .menu ul > li > a {
   display: block;
-  color: #191E21;
+  color: #000080;
   padding: 11px 17px;
   text-decoration: none;
   letter-spacing: .5px;
