--- a/css/style.css
+++ b/css/style.css
@@ -1845,7 +1845,7 @@ article footer .btn-primary:focus {
   height: 55px;
   width: 100%;
   line-height: 23px;
-  background-color: #0ff;
+  background-color: #ffffff;
   border-top: 1px solid #DDDDDD;
   border-bottom: 1px solid #DDDDDD;
 }
@@ -1892,14 +1892,15 @@ article footer .btn-primary:focus {
 }
 .menu ul > li > a {
   display: block;
-  color: #000080;
+  color: #ffffff;
   padding: 11px 17px;
   text-decoration: none;
   letter-spacing: .5px;
   font-weight: 700;
   line-height: 32px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Times New Roman', serif;
   position: relative;
+  font-size: large;
   z-index: 1;
 }
 .menu ul > li > a i {
