Fixed navbar elements

--- a/css/style.css
+++ b/css/style.css
@@ -1436,7 +1436,7 @@ article .time {
   margin: 0;
 }
 article footer {
- 
+
 }
 article footer .btn-primary {
   background-color: transparent;
@@ -1892,7 +1892,7 @@ article footer .btn-primary:focus {
 }
 .menu ul > li > a {
   display: block;
-  color: #ffffff;
+  color: #191E21;
   padding: 11px 17px;
   text-decoration: none;
   letter-spacing: .5px;
@@ -1900,7 +1900,7 @@ article footer .btn-primary:focus {
   line-height: 32px;
   font-family: 'Times New Roman', serif;
   position: relative;
-  font-size: large;
+  font-size: 20px;
   z-index: 1;
 }
 .menu ul > li > a i {
@@ -2992,7 +2992,7 @@ aside .ads figcaption {
   }
 }
 footer.footer {
-  
+
   background-color: #252e38;
   color: #848f9a;
   padding: 20px 0;
